--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8"><title>Testi</title></head>
 <body>
-<h1>Netlify toimii!</h1>
-<p>Tämä on testi, jotta Sites-välilehti ilmestyy näkyviin.</p>
+<h1>TEKEILLÄ ELI KESKEN!</h1>
+<p>ja muutenkin on niin että kannattaa hankkia parempaa tekemistä kuin tulla mun sivustolle....</p>
 </body>
 </html>
